# blockchain-notary-poc

./: CITATION.cff  LICENSE  README.md  config.ini  rio-registration.cabal
app/: Main.hs  Rio.hs  Timestamp.hs  TimestampAccess.hs
timestamp/: Timestamp.abi  Timestamp.sol  deploy_web3.js  deploy_web3_0.20.js
